chore: fix body overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,8 @@ body, html {
     margin: 0;
     height: 100%;
     width: 100%;
+
+    overflow: hidden;
 }
 
 body {
